# cmakedemo

./: CMakeLists.txt  README  cmake笔记.md
Src/: CMakeLists.txt  CMakedemo.cpp  CMakedemo.h
lib/: CMakeLists.txt  hello.cpp  hello.h
